--- a/src/main/res/layout/activity_chat.xml
+++ b/src/main/res/layout/activity_chat.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/_12sdp"
+        android:background="@color/primary"
         app:layout_constraintTop_toBottomOf="@id/imageBack"
         />
     <View
@@ -84,6 +85,7 @@
         android:orientation="vertical"
         android:overScrollMode="never"
         android:padding="@dimen/_20sdp"
+        app:stackFromEnd="true"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@id/viewBackground"
